fixes and add high-res

--- a/catalog.yml
+++ b/catalog.yml
@@ -3,6 +3,16 @@ plugins:
   source:
   - {module: intake_xarray}
 sources:
+  coral_highres:
+    args:
+      consolidated: true
+      storage_options:
+        s3:
+          anon: true
+          client_kwargs: {endpoint_url: 'https://minio.denby.eu'}
+      urlpath: simplecache::s3://eurec4a-environment/bco/coral_highres
+    description: CORAL LIDAR at BCO
+    driver: zarr
   coral_lowres:
     args:
       consolidated: true
